Fixed work component section load more button grid alignment on all viewport widths

--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -13,7 +13,7 @@
         gap: 3em;
 
         .load-more-container {
-            grid-column: 1 / 3;
+            grid-column: 1 / 4;
             margin: 5em 0;
             justify-content: center;
             align-items: center;
@@ -97,7 +97,7 @@
     }
 
     #work .works-container .load-more-container {
-        grid-column: 1 / 2;
+        grid-column: 1 / 3;
     }
     
     #work .works-container {
@@ -111,7 +111,7 @@
         grid-auto-rows: auto;
     }
 
-    .load-more-container {
+    #work .works-container .load-more-container {
         grid-column: 1;
     }
 
